# magicstaff

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  detector.c  disco.txt  game.c  health.c  latencies.csv  main.c  osc.c  qlc.template  receiver.c  requirements.txt  test.py  udp_to_osc.py  wrap2.txt  wraps.txt
include/: FreeRTOSConfig.h  datatypes.h  detector.h  game.h  health.h  receiver.h
